--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 Change log for txn-install, the transactional file install tool.
 
 0.1.1	not yet ;)
+	- add an "install" target
 
 0.1.0	2017/07/29
 	- Initial public release.
