--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@ Change log for txn-install, the transactional file install tool.
 
 0.1.1	not yet ;)
 	- add an "install" target
+	- add a mode parameter to open(O_CREAT) calls
 
 0.1.0	2017/07/29
 	- Initial public release.
