--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Change log for txn-install, the transactional file install tool.
 0.1.1	not yet ;)
 	- add an "install" target
 	- add a mode parameter to open(O_CREAT) calls
+	- use "patch -o tempfile" and make reverting a bit more robust
 
 0.1.0	2017/07/29
 	- Initial public release.
