--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 Change log for txn-install, the transactional file install tool.
 
+0.2.0	not yet ;)
+
 0.1.1	2017/07/30
 	- add an "install" target
 	- add a mode parameter to open(O_CREAT) calls
