--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Change log for txn-install, the transactional file install tool.
 	- only roll back the last record when installing a file fails
 	- fix some file existence checks in the test
 	- add the "install-exact" command
+	- do not write an index entry when install does not change the file
 
 0.1.1	2017/07/30
 	- add an "install" target
