--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 Change log for txn-install, the transactional file install tool.
 
+0.2.1	not yet ;)
+
 0.2.0	2017/08/04
 	- fix a non-null-terminated execlp() call to install(1)
 	- only roll back the last record when installing a file fails
