--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 Change log for txn-install, the transactional file install tool.
 
 0.2.1	not yet ;)
+	- add the txn.1 manual page and install the txn-install.1 and
+	  txn-remove.1 links
 
 0.2.0	2017/08/04
 	- fix a non-null-terminated execlp() call to install(1)
