--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Change log for txn-install, the transactional file install tool.
 0.2.1	not yet ;)
 	- add the txn.1 manual page and install the txn-install.1 and
 	  txn-remove.1 links
+	- fix a typo in the 02-simple test
 
 0.2.0	2017/08/04
 	- fix a non-null-terminated execlp() call to install(1)
