--- a/txn.1
+++ b/txn.1
@@ -55,7 +55,7 @@
 .Cm list-modules
 .Pp
 .Nm
-.Op Fl V | Fl -version | Fl h | Fl -help
+.Op Fl V | Fl -version | Fl h | Fl -help | --features
 .Sh DESCRIPTION
 The
 .Nm
@@ -98,6 +98,8 @@ utility accepts the following command-line options:
 .It Fl c
 Passed on to
 .Xr install 1 .
+.It Fl -features
+List the features supported by the program.
 .It Fl g Ar group
 Passed on to
 .Xr install 1 .
