--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+txn-install (0.2.1-1~1) UNRELEASED; urgency=medium
+
+  * New upstream version, update the upstream copyright years.
+
+ -- Peter Pentchev <pp@storpool.com>  Thu, 19 Jul 2018 11:04:53 +0300
+
 txn-install (0.2.0-1~1) unstable; urgency=medium
 
   * Initial release.
