--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ txn-install (0.2.1-1~1) UNRELEASED; urgency=medium
 
   * New upstream version, update the upstream copyright years.
   * Fill in some debian/control and debian/upstream/metadata information.
+  * Add a watch file and the upstream OpenPGP signing key.
 
  -- Peter Pentchev <pp@storpool.com>  Thu, 19 Jul 2018 11:04:53 +0300
 
