Rules-Requires-Root: no, do not strip the binary.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ txn-install (0.2.1-1~1) UNRELEASED; urgency=medium
   * Add a watch file and the upstream OpenPGP signing key.
   * Bring up to compliance with version 4.1.5 of the Debian policy:
     - drop the redundant "Testsuite: autopkgtest" source control field
+  * Add "Rules-Requires-Root: no" and override the install(1) invocations,
+    thereby also stopping the upstream build system from stripping
+    the installed executable file so that a -dbgsym package may be created.
 
  -- Peter Pentchev <pp@storpool.com>  Thu, 19 Jul 2018 11:04:53 +0300
 
