--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ txn-install (0.2.1-1~1) UNRELEASED; urgency=medium
   * Add the Vcs-* source control fields.
   * Drop the dependency on the essential "diffutils" package.
   * Add a trivial autopkgtest running adequate on the installed package.
+  * Bump the debhelper compatibility level to 11 with no changes.
 
  -- Peter Pentchev <pp@storpool.com>  Thu, 19 Jul 2018 11:04:53 +0300
 
