--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-txn-install (0.2.1-1~1) UNRELEASED; urgency=medium
+txn-install (0.2.1-1~1) unstable; urgency=medium
 
   * New upstream version, update the upstream copyright years.
   * Fill in some debian/control and debian/upstream/metadata information.
@@ -14,7 +14,7 @@ txn-install (0.2.1-1~1) UNRELEASED; urgency=medium
   * Bump the debhelper compatibility level to 11 with no changes and
     use the debhelper-compat (= 11) mechanism.
 
- -- Peter Pentchev <pp@storpool.com>  Thu, 19 Jul 2018 11:04:53 +0300
+ -- Peter Pentchev <pp@storpool.com>  Thu, 19 Jul 2018 12:29:05 +0300
 
 txn-install (0.2.0-1~1) unstable; urgency=medium
 
