--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+txn-install (0.2.1-1~1ubuntu2) UNRELEASED; urgency=medium
+
+  * Refer to the "bionic", not "debian", branch in the Vcs-* URLs.
+
+ -- Peter Pentchev <pp@storpool.com>  Fri, 20 Jul 2018 12:27:46 +0300
+
 txn-install (0.2.1-1~1ubuntu1) bionic; urgency=medium
 
   * Rebuild for Bionic.
